--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Gugi&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap');
+
 
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
